# diffsurrogate

./: .gitignore  404.html  README.md  config.toml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy_docs.yml
api_reference/: index.html
architecture/: index.html
cli/: index.html
configuration/: index.html
contributing/: index.html
data/: index.html
development/: index.html
diffsurrogate/: __init__.py  config.py
diffsurrogate/cli/: __init__.py  benchmark_cmd.py  main.py  predict_cmd.py  train_cmd.py
diffsurrogate/data/: __init__.py  loader.py  splitter.py  transforms.py
diffsurrogate/evaluation/: __init__.py  artifacts.py  benchmark.py  metrics.py  report.py  research.py  visualize.py
diffsurrogate/models/: __init__.py  base.py  deep_gp.py  fno.py  gaussian_process.py  (+3 more)
docs/: api_reference.md  architecture.md  cli.md  configuration.md  contributing.md  data.md  development.md  evaluation.md  examples.md  faq.md  index.md  installation.md  models.md  persistence.md  quickstart.md  research_benchmarking.md  site_build.md  testing.md
evaluation/: index.html
examples/: config_deep_gp.toml  config_fast.toml  config_fno.toml  config_gaussian_process.toml  config_neural_net.toml  config_pce.toml  config_pinn.toml  generate_example_data.py  index.html  predict_inputs.csv  synthetic_lookup.csv
faq/: index.html
installation/: index.html
models/: index.html
persistence/: index.html
quickstart/: index.html
research_benchmarking/: index.html
search/: search_index.json
site_build/: index.html
testing/: index.html
tests/: conftest.py  test_benchmark_reporting.py  test_metrics.py  test_models.py  test_persistence.py  test_transforms.py
(+16 files in other folders)
