[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffsurrogate"
version = "0.1.0"
description = "Surrogate modeling for diffractive scattering observables in QCD"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "diffsurrogate developers" }]
keywords = ["physics", "qcd", "surrogate", "gaussian-process", "pinn", "fno", "diffractive-scattering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "tomli>=2.0 ; python_version<'3.11'",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
gpytorch = ["torch>=2.1", "gpytorch>=1.11"]
neuraloperator = ["torch>=2.1", "neuraloperator>=0.3.0"]
chaospy = ["chaospy>=4.3"]
hdf5 = ["h5py>=3.9"]
all = [
    "torch>=2.1",
    "gpytorch>=1.11",
    "neuraloperator>=0.3.0",
    "chaospy>=4.3",
    "h5py>=3.9",
]
test = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
diffsurrogate = "diffsurrogate.cli.main:main"

[tool.setuptools]
packages = [
    "diffsurrogate",
    "diffsurrogate.data",
    "diffsurrogate.models",
    "diffsurrogate.evaluation",
    "diffsurrogate.persistence",
    "diffsurrogate.cli",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q"
